--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline
 
 on:
   # push:
-  #   branches: [development]
+  #   branches: [main, development]
   pull_request:
-    branches: [development]
+    branches: [main, development]
 
 jobs:
   build-and-test:
@@ -33,5 +33,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-test
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Deploy to Vercel
         run: npx vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
+        env:
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
