--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy to Vercel
-        run: 
+        run: |
           if [ "${GITHUB_REF##*/}" == "main" ]; then
             npx vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --confirm
           elif [ "${GITHUB_REF##*/}" == "development" ]; then
