--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,6 @@
 name: CI/CD Pipeline
 
 on:
-  # push:
-  #   branches: [main, development]
   pull_request:
     branches: 
       - main
@@ -39,11 +37,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy to Vercel
-        run: |
-          if [ "${GITHUB_REF##*/}" == "main" ]; then
-            npx vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --confirm
-          else
-            npx vercel --token ${{ secrets.VERCEL_TOKEN }} --confirm
-          fi
+        run: npx vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes
         env:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_PROJECT_ID }}
