--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Run Linter
+        run: npm run eslint
+
       - name: Run tests
         run: npm run test
 
