feat: Change yml and Signed text with branch

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -6,8 +6,9 @@ env:
 
 on:
   pull_request:
-    branches-ignore: 
-      - main
+    branches: 
+      - development
+      - release/*
 
 jobs:
   build-and-test:
