feat: Change yml to PR and Merge

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,6 +2,7 @@ name: Building
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened]
     branches: 
       - main
       - development
