feat: Change yml to mdev, mprod and pr

--- a/.github/workflows/mprod.yml
+++ b/.github/workflows/mprod.yml
@@ -1,11 +1,10 @@
-name: Deployment
+name: DeploymentProd
 
 on:
   pull_request:
     types: [closed]
     branches: 
       - main
-      - development
 
 jobs:
   deploy:
