--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,12 +33,12 @@ jobs:
       - name: Build project
         run: npm run build
  
-      - name: vercel-preview-url
-        uses: zentered/vercel-preview-url@v1.1.9
-        id: vercel_preview_url
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-        with:
-          vercel_project_id: ${{ secrets.VERCEL_PROJECT_ID }}
-      - name: Get URL
-        run: echo "https://${{ steps.vercel_preview_url.outputs.preview_url }}"
+      # - name: vercel-preview-url
+      #   uses: zentered/vercel-preview-url@v1.1.9
+      #   id: vercel_preview_url
+      #   env:
+      #     VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      #   with:
+      #     vercel_project_id: ${{ secrets.VERCEL_PROJECT_ID }}
+      # - name: Get URL
+      #   run: echo "https://${{ steps.vercel_preview_url.outputs.preview_url }}"
