--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -12,6 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Cancel Previous Redundant Actions
+        uses: styfle/cancel-workflow-action@0.12.1
+        with:
+          access_token: ${{ github.token }}
+
       - name: Checkout code
         uses: actions/checkout@v3
 
