feat: Separate jobs

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,12 +3,10 @@ name: Building
 on:
   pull_request:
     types: [opened, synchronize, reopened]
-    branches: 
-      - main
-      - development
+    branches: [main, development]
 
 jobs:
-  build-and-test: 
+  avoid_reduncy:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,6 +15,30 @@ jobs:
         with:
           access_token: ${{ github.token }}
 
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+
+        - name: Setup Node.js
+          uses: actions/setup-node@v3
+          with:
+            node-version: '20.12.2'
+            cache: 'npm'
+
+        - name: Install dependencies
+          run: npm install
+
+        - name: Run Linter
+          run: npm run eslint
+
+  test:
+    needs: [lint]
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -29,17 +51,39 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run Linter
-        run: npm run eslint
-
       - name: Run tests
         run: npm run test
+
+  sonar:
+    needs: [lint, test]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Sonar Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ github.token }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  build: 
+    needs: [lint, test, sonar]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.12.2'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Build project
         run: npm run build
