--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -3,20 +3,22 @@ name: Deployment
 on:
   pull_request:
     types: [closed]
-    branches: 
-      - main
-      - development
+    branches: [main, development]
 
 jobs:
-  deploy:
+  avoid_reduncy:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Cancel Previous Redundant Actions
         uses: styfle/cancel-workflow-action@0.12.1
         with:
           access_token: ${{ github.token }}
 
+  deploy:
+    runs-on: ubuntu-latest
+    
+    steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
